sources/.k8s/k8s-gke-deployment-postgres.yml
# ===================================================
# KUBERNETES DEPLOYMENT: Seats Reservation System
# Database: PostgreSQL with PgBouncer
# !!!NOTE!!! No need LoadBalancer, due to using GKE Cloud LoadBalancer
# ===================================================

---
# ===================================================
# 2. REDIS CACHE
# ===================================================
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cache
  namespace: gke-seats-reservation-postgres
spec:
  serviceName: redis-service
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: gke-seats-reservation-postgres
spec:
  type: ClusterIP       # or NodePort but dont specify nodePort, because it will conflict with SQLite
  ports:
    - port: 6379        # Internal communication port between container in K8s
      targetPort: 6379  # Listen Port that Spring Boot Service is using
      # nodePort: 32379 # Port for external host. Valid range: 30000-32767
  selector:
    app: redis-cache

---
# ===================================================
# 5. RESOURCE DEPLOYMENT: Manage Pod is running Next.js
# ===================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seats-reservation-deployment
  namespace: gke-seats-reservation-postgres
spec:
  replicas: 2             # SQLite, only 1 replica to avoid data mismatch.
  selector:
    matchLabels:
      app: seats-reservation-postgres
  template:
    metadata:
      labels:
        app: seats-reservation-postgres
    spec:
      # Specify GCP Service Account for pulling image on GCP Repository
      serviceAccountName: PLACEHOLDER_GCP_SERVICE_ACCOUNT_RUNNER
      
      # affinity
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - seats-reservation
              topologyKey: kubernetes.io/hostname
      
      # depend on other services
      containers:
      - name: seats-reservation-postgres-app
        image: PLACEHOLDER_GKE_REGISTRY_IMAGE       # Docker Hub/Registry Image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000     # Next.js port that is running
        
        # enviroment variables
        resources:
          # requests:
          #   memory: "512Mi"
          #   cpu: "500m"
          # limits:
          #   memory: "1Gi"
          #   cpu: "1000m"
          # -------------------------------------------------
          # use this to reduce GKE resource in Free Tier when testing high requests, scalability test
          # -------------------------------------------------
          requests:
            cpu: "100m"       # 10% CPU when Node start
            memory: "128Mi"   # 128MB RAM
          limits:
            cpu: "300m"      # allow maximum 30% CPU when k6 shoot requests
            memory: "256Mi"  # limit hardware to 256MB RAM to avoid Out-Of-Memory (OOMKilled)
        
        # health check
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000          # Next.js port that is running
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000          # Next.js port that is running
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        # security
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001     # run by ID of user nextjs that had been created in Dockerfile
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL

---
# ===================================================
# 6. RESOURCE SERVICE: Internal Network (ClusterIP)
# ===================================================
apiVersion: v1
kind: Service
metadata:
  name: seats-reservation-service
  namespace: gke-seats-reservation-postgres
  annotations:
    # This critical line allows ClusterIP to pair with GKE Ingress
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 80            # port open for K8s Ingress calling to
    targetPort: 3000    # real port that Next.js listening in container
  selector:
    app: seats-reservation-postgres

---
# ===================================================
# 7. NETWORK POLICY - Security
# ===================================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seats-reservation-netpol
  namespace: gke-seats-reservation-postgres
spec:
  podSelector:
    matchLabels:
      app: seats-reservation-postgres
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}     # 🔓 Allow all internal Ingress Controller (including Docker Desktop) calling into
  egress:
  - to:
    - podSelector: {}     # 🔓 Allow all Pod Redis in namespace
    ports:
    - protocol: TCP
      port: 6379          # Port Redis
  - to:
    - podSelector: {}     # 🔓 Allow all Pod Next.js in namespace
    ports:
    - protocol: TCP
      port: 3000          # Port Next.js
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: TCP
      port: 80
    - protocol: UDP
      port: 53

---
# ===================================================
# 8. RESOURCE INGRESS: Traffic Router from external
# ===================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seats-reservation-ingress
  namespace: gke-seats-reservation-postgres
spec:
  # Use "gce" for external HTTP(S) LB or "gce-internal" for internal HTTP(S) LB
  ingressClassName: gce
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # 🌟 point ClusterIP Service (no need to use LoadBalancer, due to using GKE Cloud LoadBalancer)
              name: seats-reservation-service
              port:
                number: 80    # ClusterIP Service (`seats-reservation-service`) Port for Ingress calling to
